tests/baselines/reference/privateNamesUnique.errors.txt
tests/cases/conformance/classes/members/privateNames/privateNamesUnique.ts(1,5): error TS1128: Declaration or statement expected.
tests/cases/conformance/classes/members/privateNames/privateNamesUnique.ts(1,9): error TS1128: Declaration or statement expected.
tests/cases/conformance/classes/members/privateNames/privateNamesUnique.ts(1,11): error TS2693: 'number' only refers to a type, but is being used as a value here.
tests/cases/conformance/classes/members/privateNames/privateNamesUnique.ts(2,1): error TS1128: Declaration or statement expected.
tests/cases/conformance/classes/members/privateNames/privateNamesUnique.ts(8,10): error TS2304: Cannot find name 'A'.


==== tests/cases/conformance/classes/members/privateNames/privateNamesUnique.ts (5 errors) ====
        #foo: number;
        ~~~~
!!! error TS1128: Declaration or statement expected.
            ~
!!! error TS1128: Declaration or statement expected.
              ~~~~~~
!!! error TS2693: 'number' only refers to a type, but is being used as a value here.
    }
    ~
!!! error TS1128: Declaration or statement expected.
    
    class B {
        #foo: number;
    }
    
    const b: A = new B()      // Error: Property #foo is missing
             ~
!!! error TS2304: Cannot find name 'A'.
    